# vault-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: MCP.md  ROADMAP.md
scripts/: ingest.py
server/: __init__.py  config.py  main.py
server/mcp/: __init__.py  sidecar.py
tests/: test_health.py  test_mcp_integration.py  test_mcp_rag.py
